made some minor changes

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -400,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get Ids of False Positives"
+    "## Get Indices of False Positives"
    ]
   },
   {
@@ -428,15 +428,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modify y"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "''' \n",
-    "Function to find rows (mushrooms) that are predicted to be poisonous, but are actually edible and return their index.\n",
-    "Takes y and y_pred as input.\n",
-    "Returns a list of indices of the false positives.\n",
+    "Function to change the falsePositives of y a number of times.\n",
+    "Takes a model/pipe, X, y and n = number of changes as input.\n",
+    "Returns the changed y.\n",
     "'''\n",
     "\n",
     "def modify_y(model, X, y, n):\n",
@@ -557,116 +564,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_final = modify_y(random_forest_pipe, X_2, y_2, 5)"
    ]
@@ -894,18 +794,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "random_forest_pipe.fit(X, y_final)\n",
     "y_pred_final = random_forest_pipe.predict(X_test_final)"
@@ -913,20 +804,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\preprocessing\\_label.py:98: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\preprocessing\\_label.py:133: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xgb_pipe.fit(X, y_final)\n",
     "y_pred_final = xgb_pipe.predict(X_test_final)"
