made some comments

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -480,10 +480,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create pipeline with preprocessor and RandomForest as Classifier\n",
+    "\n",
     "random_forest_pipe = Pipeline(steps=[\n",
     "    ('preprocessor', preprocessor),\n",
     "    ('classifier', RandomForestClassifier(  random_state=1337,\n",
-    "                                            class_weight = {0: 1, 1: 10}))\n",
+    "                                            class_weight = {0: 1, 1: 10})) # put more weight on false Positives than false Negatives\n",
     "    ])"
    ]
   },
@@ -502,10 +504,16 @@
     }
    ],
    "source": [
+    "# fit the pipe to the train data\n",
+    "\n",
     "random_forest_pipe.fit(X_train, y_train)\n",
+    "\n",
+    "# predict y_train and y_test\n",
     "\n",
     "y_pred_train = random_forest_pipe.predict(X_train)\n",
     "y_pred_test = random_forest_pipe.predict(X_test)\n",
+    "\n",
+    "# print the accuracy\n",
     "\n",
     "print('Accuracy on train-set: ', accuracy_score(y_true = y_train, y_pred = y_pred_train))\n",
     "print('Accuracy on test-set: ', accuracy_score(y_true = y_test, y_pred = y_pred_test))"
@@ -524,10 +532,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create pipeline with preprocessor and XGBoost as Classifier\n",
+    "\n",
     "xgb_pipe = Pipeline(steps=[\n",
     "    ('preprocessor', preprocessor),\n",
     "    ('classifier', XGBClassifier(   random_state=1337,\n",
-    "                                    scale_pos_weight = 5))\n",
+    "                                    scale_pos_weight = 5)) # put more weight on false Positives than false Negatives\n",
     "    ])"
    ]
   },
@@ -546,10 +556,16 @@
     }
    ],
    "source": [
+    "# fit the pipe to the train data\n",
+    "\n",
     "xgb_pipe.fit(X_train, y_train)\n",
+    "\n",
+    "# predict y_train and y_test\n",
     "\n",
     "y_pred_train = xgb_pipe.predict(X_train)\n",
     "y_pred_test = xgb_pipe.predict(X_test)\n",
+    "\n",
+    "# print the accuracy\n",
     "\n",
     "print('Accuracy on train-set: ', accuracy_score(y_true = y_train, y_pred = y_pred_train))\n",
     "print('Accuracy on test-set: ', accuracy_score(y_true = y_test, y_pred = y_pred_test))"
@@ -568,6 +584,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# modify false Positives to true in y five times\n",
+    "\n",
     "y_final = modify_y(random_forest_pipe, X_2, y_2, 5)"
    ]
   },
@@ -685,6 +703,8 @@
     }
    ],
    "source": [
+    "# compare original and modified y\n",
+    "\n",
     "comparison = pd.concat([y, y_final], axis = 1)\n",
     "\n",
     "comparison.columns.values[0] = 'original'\n",
@@ -722,6 +742,8 @@
     }
    ],
    "source": [
+    "# plot AUROC\n",
+    "\n",
     "plotAUROC(xgb_pipe, X_test, y_test)"
    ]
   },
@@ -782,6 +804,8 @@
     }
    ],
    "source": [
+    "# plot confusion matrix\n",
+    "\n",
     "get_confusion_matrix(y_test, y_pred_test)"
    ]
   },
@@ -798,6 +822,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fit random_forest_pipe again with y_final and predict the outcomes\n",
+    "\n",
     "random_forest_pipe.fit(X, y_final)\n",
     "y_pred_final = random_forest_pipe.predict(X_test_final)"
    ]
@@ -808,6 +834,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fit xgb_pipe again with y_final and predict the outcomes\n",
+    "\n",
     "xgb_pipe.fit(X, y_final)\n",
     "y_pred_final = xgb_pipe.predict(X_test_final)"
    ]
@@ -818,6 +846,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export predicted values to csv\n",
+    "\n",
     "(\n",
     "    mushrooms_test\n",
     "    .assign(poisonous=y_pred_final)\n",
