--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -515,8 +515,8 @@
     "\n",
     "# print the accuracy\n",
     "\n",
-    "print('Accuracy on train-set: ', accuracy_score(y_true = y_train, y_pred = y_pred_train))\n",
-    "print('Accuracy on test-set: ', accuracy_score(y_true = y_test, y_pred = y_pred_test))"
+    "print('Accuracy on train-set: ', metrics.accuracy_score(y_true = y_train, y_pred = y_pred_train))\n",
+    "print('Accuracy on test-set: ', metrics.accuracy_score(y_true = y_test, y_pred = y_pred_test))"
    ]
   },
   {
@@ -567,8 +567,8 @@
     "\n",
     "# print the accuracy\n",
     "\n",
-    "print('Accuracy on train-set: ', accuracy_score(y_true = y_train, y_pred = y_pred_train))\n",
-    "print('Accuracy on test-set: ', accuracy_score(y_true = y_test, y_pred = y_pred_test))"
+    "print('Accuracy on train-set: ', metrics.accuracy_score(y_true = y_train, y_pred = y_pred_train))\n",
+    "print('Accuracy on test-set: ', metrics.accuracy_score(y_true = y_test, y_pred = y_pred_test))"
    ]
   },
   {
